<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblNombre" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblNombre"
        android:ems="10"
        android:hint="@string/inputNombreHINT" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputNombre"
        android:text="@string/lblTipo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/comboTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblTipo"
        android:layout_toRightOf="@+id/lblTipo" />

    <TextView
        android:id="@+id/lblDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/comboTipo"
        android:text="@string/lblDireccion"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblDireccion"
        android:ems="10"
        android:hint="@string/inputDireccionHINT" />

    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputDireccion"
        android:text="@string/lblTelefono"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblTelefono"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/lblDireccion"
        android:ems="10"
        android:hint="@string/inputTelefonoHINT"
        android:inputType="phone" />

    <TextView
        android:id="@+id/lblUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputTelefono"
        android:text="@string/lblUrl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblUrl"
        android:ems="10"
        android:hint="@string/inputUrlHINT"        
        android:inputType="textUri" />

    <TextView
        android:id="@+id/lblComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/inputURL"
        android:text="@string/lblComentario"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/inputComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblComentario"
        android:ems="10"
        android:hint="@string/inputComentarioHINT"
        android:inputType="textMultiLine" />

</RelativeLayout>